--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,34 @@ task sourceJar(type: Jar) {
     from sourceSets.main.allJava
 }
 
+ext {
+    //@formatter:off
+
+    //utility deps
+    jsonOrgVersion              = '20180130'
+    commonsTextVersion          = '1.3'
+    commonsIOVersion            = '2.6'
+    commonsCodecVersion         = '1.11'
+    commonsCollectionsVersion   = '4.1'
+    snakeYamlVersion            = '1.19' //do not upgrade to 1.20, app wont start up
+    guavaVersion                = '24.1-jre'
+    gsonVersion                 = '2.8.2'
+
+    //logging / monitoring deps
+    logbackVersion              = '1.2.3'
+    sentryVersion               = '1.7.2'
+    prometheusClientVersion     = '0.3.0'
+
+    //http / web deps
+    okhttpVersion               = '3.10.0'
+
+    //QA deps
+    spotbugsVersion             = '3.1.2'
+    napsterAnnotations          = '0.0.1'
+
+    //@formatter:on
+}
+
 dependencies {
     compile group: 'org.json', name: 'json', version: jsonOrgVersion
     compile group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: spotbugsVersion
